@@ -1,15 +1,14 @@
 package org.mtr.test;
 
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 import org.apache.commons.io.FilenameUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.mtr.libraries.com.google.gson.JsonObject;
-import org.mtr.libraries.com.google.gson.JsonParser;
-import org.mtr.mod.Init;
-import org.mtr.mod.resource.BlockbenchModelValidator;
+import org.mtr.MTR;
+import org.mtr.resource.BlockbenchModelValidator;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 
 public final class BlockbenchModelValidationTest {
@@ -19,14 +18,14 @@ public final class BlockbenchModelValidationTest {
 		try (final DirectoryStream<Path> stream = Files.newDirectoryStream(Paths.get(System.getProperty("user.dir")).resolve("src/main/resources/assets/mtr/models/vehicle"))) {
 			stream.forEach(path -> {
 				final String id = FilenameUtils.getBaseName(path.toString());
-				Init.LOGGER.info("Validating {}", id);
+				MTR.LOGGER.info("Validating {}", id);
 
 				try {
 					final JsonObject modelObject = JsonParser.parseReader(Files.newBufferedReader(path)).getAsJsonObject();
 					BlockbenchModelValidator.validate(modelObject, id, Assertions::assertTrue);
-					Files.write(path, modelObject.toString().getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING);
+					Files.writeString(path, modelObject.toString(), StandardOpenOption.TRUNCATE_EXISTING);
 				} catch (IOException e) {
-					e.printStackTrace();
+					MTR.LOGGER.error("", e);
 				}
 			});
 		}
